# inferno

./: AUTHORS  Makefile  README.md
client/: Client.ml  F.ml  F.mli  FPrinter.ml  FTypeChecker.ml  FTypeChecker.mli  MLPrinter.ml  Main.ml  Result.ml
naive/: constraint.ml  constraint_of_term.ml  dune  solver.ml  solving.ml  state.ml  subst.ml  tc_errors.ml  term.ml  testing.ml  tevar.ml  types.ml  tyvar.ml  unification.ml  unifier.ml
shared/: DeBruijn.ml  DeBruijn.mli  dune  logging.ml  ml.ml  tc_result.ml  test_definitions.ml  types.ml
src/: Debug.ml  Debug.mli  Generalization.ml  Generalization.mli  Option.ml  Option.mli  SolverHi.ml  SolverHi.mli  SolverLo.ml  SolverLo.mli  SolverSig.ml  TUnionFind.ml  TUnionFind.mli  Unifier.ml  Unifier.mli  UnifierSig.ml  UnionFind.ml  UnionFind.mli  Utility.ml  dune
