(library
  (name naive)
  (preprocess (pps ppx_deriving.std ppx_hash ppx_compare ppx_sexp_conv))
  (modules solving unification types constraint state tc_errors term tevar tyvar constraint_of_term)
  (libraries shared core sexplib)
)

(executable
  (name Testing)
  (modes native)
  (preprocess (pps ppx_deriving.std ppx_hash ppx_compare ppx_sexp_conv))
  (libraries naive shared core ounit2)
  (modules testing))
